--- a/codigo-base-simulator/codigo-base-simulator/src/Makefile
+++ b/codigo-base-simulator/codigo-base-simulator/src/Makefile
@@ -1,4 +1,4 @@
-sim: shell.c sim.c instruction_decoder.c
+sim: shell.c sim.c instruction_decoder.c instructions.c
 	gcc -g -O2 $^ -o $@
 
 .PHONY: clean
